[tool.isort]
profile = "black"
length_sort = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = "-v"

[tool.poetry]
name = "pwncat-cs"
version = "0.5.4"
description = "Reverse and bind shell automation framework"
authors = ["Caleb Stewart <caleb.stewart94@gmail.com>", "John Hammond"]
readme = "README.md"
repository = "https://github.com/calebstewart/pwncat"
documentation = "https://pwncat.readthedocs.io"
keywords = ["offsec", "cyber", "exploitation", "privesc", "automation"]
packages = [
  { include = "pwncat" },
]
license = "MIT"

[tool.poetry.scripts]
pwncat-cs = "pwncat.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/calebstewart/pwncat/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
netifaces = "^0.11.0"
packaging = "^23.1"
prompt-toolkit = "^3.0.39"
pycryptodome = "^3.18.0"
requests = "^2.31.0"
rich = "^13.4.2"
python-rapidjson = "^1.10"
ZODB3 = "^3.11.0"
zodburi = "^2.5.0"
Jinja2 = "^3.1.2"
paramiko = "^2.11.0"
PyNaCl = "^1.5.0"
cryptography = "^41.0.3"
setuptools = "^70.0"
sphinx-toolbox = { version = "^3.2.0", optional = true }
Sphinx = { version= "^7.2.6", optional = true }
enum-tools = { version= "^0.11.0", optional = true }
furo = { version= "^2023.9.8", optional = true }

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"

[tool.poetry.extras]
docs = ["sphinx-toolbox", "Sphinx", "enum-tools", "furo"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
